# nightfire-open

./: .gitattributes  CMakeLists.txt  todo.txt
cmake/: compiler_settings.cmake  project_definitions.cmake
game/assets/models/general/: compile-all.py
game/assets/utils/player-skeleton-convert/: fix_animations.py  player_skeleton_convert.py  smd_bones.py  smd_reader.py  smd_writer.py
game/assets/utils/spritegen/: spritecreation.py
game/assets/utils/texturepropgen/: texturepropgen.py
game/utils/binaries/nightfire-model-batch-convert/: convert.py
scripts/: filetobytearray.py
xash3d_engine/: CMakeLists.txt
xash3d_engine/common/: netadr.h  xash3d_types.h
xash3d_engine/engine/: CMakeLists.txt  alias.h  sprite.h  vgui_api.h
xash3d_engine/engine/client/: cl_main.c  cl_pmove.c
xash3d_engine/engine/common/: filesystem_engine.c  host.c  system.c
xash3d_engine/engine/common/imagelib/: img_dds.c
xash3d_engine/engine/common/soundlib/: snd_mp3.c
xash3d_engine/engine/common/soundlib/libmpg/: mpg123.h
xash3d_engine/engine/platform/: platform.h
xash3d_engine/engine/platform/android/: android.c
xash3d_engine/engine/platform/dos/: sys_dos.c
xash3d_engine/engine/platform/linux/: vid_fbdev.c
xash3d_engine/filesystem/: CMakeLists.txt  VFileSystem009.cpp  zip.c
xash3d_engine/game_launch/: CMakeLists.txt
xash3d_engine/public/: CMakeLists.txt
xash3d_engine/ref/soft/: CMakeLists.txt
